fix the border in light and dark mode buttons

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ input {
 
 .nav-list {
     display: flex;
+    align-items: center;
     margin-left: 20px;
     gap: 25px;
     list-style-type: none;
@@ -205,7 +206,7 @@ h4 {
     color: var(--primary-color) 
 }
 
-img {
+.selfie {
     display: block;
     margin: auto;
     margin-top: 10px;
@@ -214,6 +215,22 @@ img {
     object-fit: cover;
     border-radius: 50%;
     border: 2px solid var(--primary-color);
+}
+
+#dark, #light{
+    border: none;
+}
+
+.moon {
+    display: block;
+    width: 25px;
+    background: var(--nav-bg);
+}
+
+.sun {
+    display: block;
+    width: 25px;
+    background: var(--nav-bg);
 }
 
 footer {
